--- a/portfolio.html
+++ b/portfolio.html
@@ -37,14 +37,14 @@
     <!-- Projet 3 -->
     <div class="project-card">
       <h3>SAE 103 : Découvrir un dispositif de transmission</h3>
-      <p>Description : Étude des vulnérabilités d'un réseau et mise en œuvre de correctifs.</p>
+      <p>Description : Ce projet vise à développer des compétences en analyse et interprétation de documents techniques liés aux mesures et aux transmissions. Il comprend la compréhension des documents de mesure, l’analyse des schémas et câblages, ainsi que la caractérisation des supports de transmission comme les câbles ou fibres optiques. Une partie essentielle du projet est aussi d’apprendre à présenter les résultats de manière claire et professionnelle à un client ou un collaborateur. Cette SAÉ permet d’acquérir des compétences techniques et communicationnelles indispensables dans le domaine des systèmes de transmission.</p>
       <textarea placeholder="Ajoutez des notes ou des commentaires sur ce projet..."></textarea>
     </div>
 
     <!-- Projet 4 -->
     <div class="project-card">
       <h3>SAE 104 : Se présenter sur Internet  </h3>
-      <p>Description : Création d'un chatbot intelligent avec des réponses dynamiques.</p>
+      <p>Description : Ce projet consiste à créer un portfolio en ligne afin de se présenter sur internet de manière professionnelle. Il comprend une page de présentation pour mettre en avant son parcours et ses compétences, ainsi qu’un CV en ligne détaillant les expériences et formations. D’autres pages peuvent être ajoutées, comme une galerie de projets, une page de contact ou encore un blog pour partager des réflexions et réalisations. L’objectif est de développer une identité numérique soignée en utilisant des technologies web telles que HTML, CSS et JavaScript, tout en assurant un design attractif et fonctionnel.</p>
       <textarea placeholder="Ajoutez des notes ou des commentaires sur ce projet..."></textarea>
     </div>
 
