--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="persona7">MAIDER</div>
         <div class="persona8">KAIET</div>
         <div class="persona9">MILAGRITOS</div>
+         <div class="persona10">UNAX TORRES</div>
     </div>
 </body>
 </html>
