--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="persona8">KAIET</div>
         <div class="persona9">MILAGRITOS</div>
          <div class="persona10">UNAX TORRES</div>
+         <div class="persona11">PERUANO ESCOCIDO</div>
     </div>
 </body>
 </html>
