--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
 !DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>BRHELPDESK - Referral Hub</title>
-  <style>
-    body {
-      background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
-      color: white;
-      text-align: center;
-      font-family: Arial, sans-serif;
-      padding: 50px;
-    }
-    h1 {
-      font-size: 3em;
-      margin-bottom: 20px;
-    }
-    a {
-      color: #fff;
-      font-weight: bold;
-      text-decoration: underline;
-    }
-  </style>
+    <title>BRHELPDESK</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: linear-gradient(to right, #ff9a9e, #fad0c4, #fad0c4);
+            color: #333;
+            text-align: center;
+            padding: 50px;
+        }
+        a {
+            color: #007bff;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-  <h1>Welcome to BRHELPDESK</h1>
-  <p>Your trusted referral hub to earn from popular apps!</p>
-  <p>
-    Check our top apps:<br />
-    <a href="https://rozdhan.com/">Roz Dhan</a> |
-    <a href="https://frizza.in/">Frizza</a> |
-    <a href="https://cashkaro.com/">CashKaro</a>
-  </p>
-  <p>Powered by ChatGPT + BR Team</p>
+    <h1>Welcome to BRHELPDESK</h1>
+    <p>Your trusted referral hub to earn from popular apps!</p>
+    <p>Check our top apps:</p>
+    <p>
+        <a href="https://rozdhan.com/" target="_blank">Roz Dhan</a> |
+        <a href="https://frizza.in/" target="_blank">Frizza</a> |
+        <a href="https://cashkaro.com/" target="_blank">CashKaro</a>
+    </p>
+    <p><em>Powered by ChatGPT + BR Team</em></p>
 </body>
 </html>
+
