--- a/index.html
+++ b/index.html
@@ -1,37 +1,51 @@
 !DOCTYPE html>
-<html>
+<html lang="ml">
 <head>
-    <title>BRHELPDESK</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: linear-gradient(to right, #ff9a9e, #fad0c4, #fad0c4);
-            color: #333;
-            text-align: center;
-            padding: 50px;
-        }
-        a {
-            color: #007bff;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>BRHELPDESK</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f9f9f9;
+      padding: 20px;
+    }
+    h1 {
+      color: #333;
+    }
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+    li {
+      background-color: #fff;
+      margin: 10px 0;
+      padding: 15px;
+      border-radius: 5px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    a {
+      text-decoration: none;
+      color: #1a73e8;
+      font-weight: bold;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-    <h1>Welcome to BRHELPDESK</h1>
-    <p>Your trusted referral hub to earn from popular apps!</p>
-    <p>Check our top apps:</p>
-    <p>
-        <a href="https://rozdhan.com/" target="_blank">Roz Dhan</a> |
-        <a href="https://frizza.in/" target="_blank">Frizza</a> |
-        <a href="https://cashkaro.com/" target="_blank">CashKaro</a>
-    </p>
-    <p><em>Powered by ChatGPT + BR Team</em></p>
+  <h1>BRHELPDESK</h1>
+  <p>നിങ്ങളുടെ വിശ്വസ്ത referral hub: പ്രശസ്തമായ ആപ്പുകൾ വഴി വരുമാനം നേടൂ!</p>
+  <ul>
+    <li><a href="https://rozdhan.com/" target="_blank">Roz Dhan</a> - വീഡിയോ കാണുക, ലേഖനങ്ങൾ വായിക്കുക, coin കളിച്ച് Paytm കാഷ് നേടുക.</li>
+    <li><a href="https://frizza.in/" target="_blank">Frizza</a> - റീചാർജുകൾ, ഓഫറുകൾ, coin കളിച്ച് സമ്മാനങ്ങൾ നേടുക.</li>
+    <li><a href="https://cashkaro.com/" target="_blank">CashKaro</a> - ഓൺലൈൻ ഷോപ്പിംഗിൽ കാഷ്ബാക്ക് നേടുക.</li>
+    <li><a href="https://jioupload.com?ref=haneef123" target="_blank">JioUpload</a> - ഫയലുകൾ അപ്‌ലോഡ് ചെയ്ത് referral വഴി വരുമാനം നേടുക.</li>
+    <li><a href="http://the-pocket-money.com/pm/1b678ab46ecd232a98c8633f24cfa202" target="_blank">Pocket Money</a> - ദിവസം ₹160 വരെ വാലറ്റ് പണം നേടാം. Referral കോഡ്: <strong>W0M9R3</strong></li>
+    <li><a href="https://app-earnings-link.com/givvyMusic/0izn3s6qoe9tnnam19" target="_blank">Givvy Music</a> - സംഗീതം കേട്ട് referral വഴി വരുമാനം നേടുക.</li>
+    <li><a href="https://topdeal.app.link/6M1" target="_blank">TopDeal</a> - മികച്ച ഡീലുകൾ പങ്കുവെച്ച് ലാഭം നേടുക.</li>
+    <li><a href="http://tbk.bz/8ju9uirc" target="_blank">TaskBucks</a> - ടാസ്കുകൾ പൂർത്തിയാക്കി കാഷ് & വൗച്ചറുകൾ നേടുക.</li>
+  </ul>
+  <p>Powered by ChatGPT + BR Team</p>
 </body>
 </html>
-
