--- a/ip.html
+++ b/ip.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Obtenir IP pública</title>
   <script>
-    function obtenirIP() {
+    async function obtenirIP() {
       try {
         const resposta = await fetch("https://api.ipify.org?format=json");
         const dades = await resposta.json();
