--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <li>回顾历程：与朋友、子女重温过去的美好瞬间。</li>
         </ul>
 
-        <h2>应用截图 (示例，请替换为您的实际截图)</h2>
-        <img src="placeholder_screenshot_1.png" alt="应用截图 1" class="screenshot">
-        <img src="placeholder_screenshot_2.png" alt="应用截图 2" class="screenshot">
+        <h2>应用截图</h2>
+        <img src="/placeholder_screenshot_1.png" alt="应用截图 1" class="screenshot">
+        <img src="/placeholder_screenshot_2.png" alt="应用截图 2" class="screenshot">
 
         <h2>下载应用</h2>
         <p>Apple Store的应用即将上线，敬请期待！</p>
